2011-04-21  Jakub Jelinek  <jakub@redhat.com>

	* c-parser.c (c_parser_omp_atomic): Handle parsing
	OpenMP 3.1 atomics.  Adjust c_finish_omp_atomic caller.
	* tree.def (OMP_ATOMIC_READ, OMP_ATOMIC_CAPTURE_OLD,
	OMP_ATOMIC_CAPTURE_NEW): New.
	* gimple.h (GF_OMP_ATOMIC_NEED_VALUE): New.
	(gimple_omp_atomic_need_value_p, gimple_omp_atomic_set_need_value):
	New inlines.
	* gimplify.c (gimplify_omp_atomic, gimplify_expr): Handle
	OMP_ATOMIC_READ, OMP_ATOMIC_CAPTURE_OLD and OMP_ATOMIC_CAPTURE_NEW.
	* omp-low.c (expand_omp_atomic_load, expand_omp_atomic_store): New
	functions.
	(expand_omp_atomic_fetch_op): Handle cases where old or new
	value is needed afterwards.
	(expand_omp_atomic): Call expand_omp_atomic_load resp.
	expand_omp_atomic_store.
	* tree-pretty-print.c (dump_generic_node): Handle
	OMP_ATOMIC_READ, OMP_ATOMIC_CAPTURE_OLD and OMP_ATOMIC_CAPTURE_NEW.

2011-03-10  Jakub Jelinek  <jakub@redhat.com>

	* c-typeck.c (c_finish_omp_clauses): Complain about
	TREE_READONLY decls in private, lastprivate and reduction
	clauses.

2011-03-03  Jakub Jelinek  <jakub@redhat.com>

	* c-parser.c (c_parser_omp_clause_reduction): Handle min and max.
	* c-typeck.c (c_finish_omp_clauses): Handle MIN_EXPR and MAX_EXPR.

2011-02-24  Richard Guenther  <rguenther@suse.de>

	* lto-streamer-in.c (input_bb): Do not find referenced vars
	in debug statements.

2011-02-23  Jason Merrill  <jason@redhat.com>

	* common.opt (fabi-version): Document v5 and v6.

2011-02-23  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47849
	* tree-if-conv.c (main_tree_if_conversion): Free postdom info.

2011-02-23  Jie Zhang  <jie@codesourcery.com>

	* opts-common.c (decode_cmdline_option): Print empty string
	argument as "" in decoded->orig_option_with_args_text.
	* gcc.c (execute): Print empty string argument as ""
	in the verbose output.
	(do_spec_1): Keep empty string argument.

2011-02-23  Nathan Froyd  <froydnj@codesourcery.com>

	* config.gcc: Declare score-* and crx-* obsolete.
