@@ -1,5 +1,8 @@
 2011-04-27  Jakub Jelinek  <jakub@redhat.com>
 
+	* parser.c (cp_parser_omp_atomic): Parse #pragma omp write
+	RHS using cp_parser_expression instead of cp_parser_unary_expression.
+
 	* parser.c (cp_parser_omp_atomic): Handle parsing OpenMP 3.1 atomics.
 	Adjust finish_omp_atomic caller.
 	* cp-tree.h (finish_omp_atomic): Adjust prototype.
