@@ -1,3 +1,8 @@
+2011-04-27  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-parser.c (c_parser_omp_atomic): Parse #pragma omp write
+	RHS using c_parser_expression instead of c_parser_unary_expression.
+
 2011-04-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* c-parser.c (c_parser_omp_atomic): Handle parsing
